--- a/online_test_application/test.html
+++ b/online_test_application/test.html
@@ -18,7 +18,7 @@
                 });
 
                 var QuestionsSet =[ {"question": "Q.1. Which of the following is false about String ?", 
-                "opt1":"String is immutable", "opt2":"String can be created using new operator", "opt3":"String is a primitive datatyype", "opt4":"None of the above", "answer":"String is a primitive datatype"},
+                "opt1":"String is immutable", "opt2":"String can be created using new operator", "opt3":"String is a primitive datatype", "opt4":"None of the above", "answer":"String is a primitive datatype"},
                 {"question":"Q.2. What is the size of byte variable ?", "opt1":"8 bit", "opt2":"16 bit", "opt3":"32 bit", "opt4":"64 bit", "answer":"8 bit"},
                 {"question":"Q.3. What is the size of float variable ?", "opt1":"8 bit", "opt2":"16 bit", "opt3":"32 bit", "opt4":"64 bit", "answer":"32 bit"},
                 {"question":"Q.4. What is the default value of short variable ?", "opt1":"0.0", "opt2":"0", "opt3":"null", "opt4":"not defined", "answer":"0" },
